--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Onion</string>
+    <string name="congratulations">Congratulations</string>
+    <string name="success_body">Transaction is successful</string>
+    <string name="done">Done</string>
 </resources>
